--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@
   image: 400x250.gif
 
 - title: Latest News
-  url: /posts/
+  url: /articles/
   image: 400x250.gif
 
 - title: OpenVnmrJ on GitHub
